# walt-navigator

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test_auth.sh  test_conversation_flow.py
app/: main.py
app/agents/walt/: agent.py  state.py
app/agents/walt/nodes/action/: node.py  tools.py
app/agents/walt/nodes/conversation/: node.py
app/agents/walt/nodes/query/: node.py
app/agents/walt/nodes/routes/intent/: route.py
app/api/endpoints/: agents.py  assistant.py  faqs.py
app/config/: init_db.py
app/core/: config.py
app/db/: chroma.py
app/dtos/: agents.py  faqs.py  navigation.py
app/middleware/: auth.py
app/models/: embedding.py
app/services/: background_tasks.py  conversation.py  conversation_manager.py  embdding.py  faqs_mapper.py  faqs_service.py  faqs_service2.py  langchain.py  navigation.py  prompts.py  session_manager.py  text_normalizer.py
app/shared/: const.py  forms.py  onboarding_faqs.py  paths.py
